--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,30 @@ body {
 .link:hover {
     color: #2196f3;
 }
-.button:hover, .button:focus {
-    background-color: #008CBA;
+.button {
+        background-color: #F5F4FA;
+        color: #212121;
+        font-size: 16px;
+        font-weight: 500;
+        border: none;
+        padding: 15px 32px;
+        text-align: center;
+        cursor: pointer;
+        background: #F5F4FA;
+        border-radius: 4px;
+        line-height: 1.6;
+}
+.button:hover {
+    background-color: #2196f3;
     color: white;
+    background: #2196f3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
     cursor: pointer;
+}
+.button1>.button {
+    font-weight: 700;
+    line-height: 1,87;
 }
 .columns {
     column-count: 4;
