--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,18 @@ body {
     letter-spacing: 0,03em;
     color: #757575;
 }
+ .text-figcaption2 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0,06em;
+}
+.text-figcaption3 {
+    font-size: 16px;
+    line-height: 1,88;
+    letter-spacing: 0,03em;
+    color:#757575
+}
 .text-post {
     font-weight: 700;
     font-size: 14px;
